<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_about">About</string>
    <string name="pref_about_text"></string>

    <string name="app_name">WorkingHours</string>
    <string name="initTime">00:00:00</string>
    <string name="button_start">Start</string>
    <string name="button_pause">Pause</string>
    <string name="textView_projectToTrack">Project chosen</string>
    <string name="projectOne">My Project One</string>
    <string name="projectTwo">My Project Two</string>
    <string name="projectThree">My Project One</string>
    <string name="activity1">Design</string>
    <string name="activity2">Searching</string>
    <string name="activity3">Coding</string>
    <string name="button_Save">Save</string>
    <string name="button_Add">Add</string>
    <string name="addNewProjectName">Add new Project</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_login">Login</string>
    <string name="client_repeat_password">Repeat password</string>
    <string name="user_created">User created</string>
    <string name="error_invalid_password">Password must have 5 characters</string>
    <string name="error_invalid_email">Please check your email</string>
    <string name="error_used_email">You are not registered yet</string>
    <string name="error_something_wrong">Please check entered data</string>
    <string name="action_demo_data">Build demo data</string>
    <string name="demo_data_initiated">Demo data initiated</string>
    <string name="error_field_required">Please enter email</string>
    <string name="error_incorrect_password">Password is not valid</string>
    <string name="reset_msg">Reset Data?</string>
    <string name="action_reset">The data was created</string>

    <string name="impressum"></string>
    <string name="disclaimer"></string>

    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="delete_msg">Do you really want to delete this activity?</string>

    <string name="activity_edited">Activity edited</string>

    <string name="title_add_new_project">Start new project</string>
    <string name="title_my_projects">My projects</string>
    <string name="title_report">Report</string>
    <string name="action_logout">Logout</string>
    <string name="question_logout">Do you wish to logout?</string>

    <string name="editProjectName">Edit your project name</string>
    <string name="editDay">Edit date</string>
    <string name="editActivityName">Edit activity name</string>
    <string name="editActivity">Edit activity</string>
    <string name="delete_confirm_msg">The activity was deleted</string>
    <string name="title_main_activity">My projects list</string>
    <string name="title_project_delete">Delete project</string>
    <string name="project_delete_msg">Do you want to delete this project?</string>
    <string name="action_accept">Execute</string>
    <string name="project_deleted">Project deleted</string>
    <string name="title_edit_activity">Edit activity</string>
    <string name="prompt_project_name">Name your project</string>
    <string name="project_create">Create project</string>
    <string name="project_created">Project created</string>
    <string name="title_project_edit">Edit project name</string>
    <string name="save_changes">Save changes</string>
    <string name="project_edited">Project name edited</string>
    <string name="add_activity_name">Type what you are doing now</string>
    <string name="start_chronometer">Start tracking</string>

    <string name="activityName">Name what you are doing</string>
    <string name="activity_create">Create activity</string>
    <string name="activity_created">Activity created</string>
    <string name="activity_edit">Edit Activity</string>
    <string name="button_stop">Stop</string>
    <string name="startTime">You\'ve started working at</string>
    <string name="endTime">You\'ve finished work at</string>
    <string name="title_activity_delete">Delete activity</string>
    <string name="activity_delete_msg">Do you like to delete this activity?</string>
    <string name="activity_deleted">Activity deleted</string>

</resources>