<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_project"
            android:icon="@drawable/ic_add_project_24"
            android:title="@string/title_add_new_project" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_project_list_24"
            android:title="@string/title_my_projects" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report_24"
            android:title="@string/title_report"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/action_logout"/>
        <item
            android:id="@+id/nav_none"
            android:title=""
            android:visible="false"/>
    </group>

</menu>
