<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    tools:context="com.example.workinghours.ui.activity.AddActivityInProject">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/textView_ActivityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/activityName"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/title_startTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startTime"/>
    <TimePicker
        android:id="@+id/startTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"/>

    <TextView
        android:id="@+id/title_endTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/endTime"/>
    <TimePicker
        android:id="@+id/endTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"/>

    <Button
        android:id="@+id/createActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_create" />

</LinearLayout>